<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hello_text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_bold"
                android:text="HELLO!"
                android:textAlignment="center"
                android:textSize="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UserName"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="20dp"
                android:fontFamily="@font/advent_pro_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hello_text_home" />

            <TextView
                android:id="@+id/firstString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_semibold"
                android:text="@string/firstString"
                android:textAlignment="center"
                android:textSize="25dp"/>

            <ImageView
                android:id="@+id/itemImageView1"
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:src="@drawable/firstimage" />

            <TextView
                android:id="@+id/secondString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro"
                android:text="@string/secondString"
                android:textSize="20dp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/thirdString"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ButtonStringForMeditateFragment"
                android:fontFamily="@font/advent_pro"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textAlignment="center"/>

<!--            <Button-->
<!--                android:id="@+id/meditate_btn"-->
<!--                style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:backgroundTint="#293621"-->
<!--                android:backgroundTintMode="src_in"-->
<!--                android:text="Meditate"-->
<!--                android:textColor="@color/_light_green"-->
<!--                app:iconTint="@color/alice_blue"-->
<!--                app:strokeColor="@color/alice_blue" />-->



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:textAlignment="center"
                android:fontFamily="@font/advent_pro_semibold"
                android:text="@string/thirdString"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/calm"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="25dp"
                android:text="@string/AnswerString"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/advent_pro"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/whyString"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"
                android:textSize="30dp"
                android:fontFamily="@font/advent_pro_semibold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/advent_pro"
                android:text="@string/whyAnswer"
                android:textSize="25dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>