<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hello_text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_bold"
        android:text="HELLO!"
        android:textAlignment="center"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/username_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="UserName"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="20dp"
        android:fontFamily="@font/advent_pro_light" />

    <TextView
        android:id="@+id/firstString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro_semibold"
        android:text="@string/firstString"
        android:textAlignment="center"
        android:textSize="25dp"/>

    <ImageView
        android:id="@+id/itemImageView1"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:src="@drawable/firstimage" />

    <TextView
        android:id="@+id/secondString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/advent_pro"
        android:text="@string/secondString"
        android:textSize="20dp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/thirdString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonStringForMeditateFragment"
        android:fontFamily="@font/advent_pro"
        android:textStyle="bold"
        android:textSize="20dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/meditate_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#293621"
        android:backgroundTintMode="src_in"
        android:text="Meditate"
        android:textColor="@color/_light_green"
        app:iconTint="@color/alice_blue"
        app:strokeColor="@color/alice_blue" />

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/thirdString"-->

</LinearLayout>